TD2/todo/registry-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
  - port: 5000
  selector:
    app: registry
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:latest
        name: registry
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        livenessProbe:
          httpGet:
            path: /v2/_catalog
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-pv-claim
