TD2/todo/todo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: todo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo
    spec:
      serviceAccountName: todo-hazelcast
      containers:
      - image: registry:5000/todo:latest
        name: todo
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 8080
          name: todo
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        startupProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 24
