TD2/todo/todo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-hazelcast
  namespace: todo
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: todo
  ports:
  - name: hazelcast
    port: 5701
    targetPort: 5701
